default/objects/White_Space_Template__c/White_Space_Template__c.object-meta.xml
<CustomObject>
    <label>Cross-Sell Template</label>
    <nameField>
        <label>Cross-Sell Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cross-Sell Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>