default/objects/White_Space_Template__c/fields/Column_Label_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Column_Label_Field_Name__c</fullName>
    <label>Column Label Field Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>