default/objects/White_Space_Template__c/fields/Column_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Column_Object_Name__c</fullName>
    <label>Column Object Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>