default/objects/White_Space_Template__c/fields/ColumnMapping__c.field-meta.xml
<CustomField>
    <fullName>ColumnMapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to mapping object to dynamically create columns</description>
    <label>Column Mapping</label>
    <referenceTo>Mapping__c</referenceTo>
    <relationshipLabel>White Space Templates (Column Mapping)</relationshipLabel>
    <relationshipName>White_Space_Templates_Column</relationshipName>
    <type>Lookup</type>
</CustomField>