default/objects/White_Space_Template__c/fields/hasDependentPicklistColumns__c.field-meta.xml
<CustomField>
    <fullName>hasDependentPicklistColumns__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Column values are generated based on possible picklist values from the records mapped to cell data and the picklist field&apos;s controlling field.</description>
    <label>Has Dependent Picklist Columns</label>
    <type>Checkbox</type>
</CustomField>