default/objects/White_Space_Template__c/fields/hasDependentPicklistRows__c.field-meta.xml
<CustomField>
    <fullName>hasDependentPicklistRows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Row values are generated based on possible picklist values from the records mapped to cell data and the picklist field&apos;s controlling field.</description>
    <label>Has Dependent Picklist Rows</label>
    <type>Checkbox</type>
</CustomField>