default/objects/White_Space_Template__c/fields/isLegacy__c.field-meta.xml
<CustomField>
    <fullName>isLegacy__c</fullName>
    <formula>AND(ISBLANK(ColumnMapping__c),ISBLANK(RowMapping__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isLegacy</label>
    <type>Checkbox</type>
</CustomField>