default/objects/White_Space_Template__c/fields/Row_Label_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Row_Label_Field_Name__c</fullName>
    <label>Row Label Field Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>