default/objects/White_Space_Template__c/fields/Row_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Row_Object_Name__c</fullName>
    <label>Row Object Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>