default/objects/White_Space_Template__c/fields/RowMapping__c.field-meta.xml
<CustomField>
    <fullName>RowMapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to mapping object to dynamically create rows</description>
    <label>Row Mapping</label>
    <referenceTo>Mapping__c</referenceTo>
    <relationshipLabel>White Space Templates (Row Mapping)</relationshipLabel>
    <relationshipName>White_Space_Templates_Row</relationshipName>
    <type>Lookup</type>
</CustomField>